-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.2
-
C7 + 92_201103 Subcon (020.029) + Split view SHA a704e00e89a5e9f38a6ae60345d3608b7fa29686
-
e546b6b38f95e6496fd53efba41442cde879819a, d919343e91fd5e6771f11cb59d4730ec83ed7381
Preconditions:
QGraphicsWebView includes url input field (QLineEdit) and some HTML content. View is on portrait orientation.
- tested with pvkb-addressbook test application: select 'GWeb' button and type 'http://www.google.fi' to url input field
Test steps:
1. Select 'Tarkennettu haku' ('Advanced search') from www.google.fi.
2. Tap some text input field
--> split view is open on portrait mode.
3. Tap small arrow icon on some of the QComboBoxes on 'Tarkennettu haku' page. E.g.
Expected result:
Item list is opened and no background application is visible.
Actual result:
Item list is opened (even if its position is sometimes odd, e.g. on top/left corner of the screen) and background application is visible on virtual keyboard area.
When item is selected from the list, the split view is closed.
- relates to
-
QTBUG-16572 Support partial input mode
-
- Closed
-