Prevent null pointer crash when closing splitview

Prevents crash when focus item is not set and splitview is closed.
This is partial fix to QTBUG-17045.

Task-number: QTBUG-17045
Reviewed-by: Guoqing Zhang